--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>Welcome to Java NIO Server!</h1>
+<h2>This is my first web server!</h2>
 <p>Current time: <span id="time"></span></p>
 <script>
     document.getElementById('time').textContent = new Date();
