--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -5,6 +5,7 @@
     <style>
         body { font-family: Arial; margin: 40px; }
         h1 { color: #0066cc; }
+        h4 { color: #008000; }
     </style>
 </head>
 <body>
@@ -14,5 +15,8 @@
 <script>
     document.getElementById('time').textContent = new Date();
 </script>
+<footer>
+    <h4>coded by flow</h4>
+</footer>
 </body>
 </html>
