--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -16,7 +16,7 @@
 <script>
     document.getElementById('time').textContent = new Date();
 </script>
-<h2>Регистрация</h2>
+<h2>Вход/Регистрация</h2>
 <form action="/register" method="POST">
     <div>
         <label for="username">Имя пользователя:</label>
@@ -31,7 +31,7 @@
         <input type="password" id="password" name="password" required>
     </div>
     <div>
-        <button type="submit">Зарегистрироваться</button>
+        <button type="submit">Войти/Зарегистрироваться</button>
     </div>
 </form>
 <footer>
