--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,41 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Java HTTP Server</title>
-    <style>
-        body { font-family: Arial; margin: 40px; }
-        h1 { color: #0066cc; }
-        h4 { color: #008000; }
-    </style>
+    <title>Главная</title>
 </head>
 <body>
-<h1>Welcome to Java NIO Server!</h1>
-<h2>This is my first web server!</h2>
-<p>Current time: <span id="time"></span></p>
-<script>
-    document.getElementById('time').textContent = new Date();
-</script>
-<h2>Вход/Регистрация</h2>
-<form action="/register" method="POST">
-    <div>
-        <label for="username">Имя пользователя:</label>
-        <input type="text" id="username" name="username" required>
-    </div>
-    <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-    </div>
-    <div>
-        <label for="password">Пароль:</label>
-        <input type="password" id="password" name="password" required>
-    </div>
-    <div>
-        <button type="submit">Войти/Зарегистрироваться</button>
-    </div>
-</form>
-<footer>
-    <h4>coded by flow</h4>
-</footer>
+<h1>Добро пожаловать!</h1>
+<a href="login.html">Войти</a>
 </body>
 </html>
