--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -4,14 +4,13 @@
     <title>Профиль</title>
 </head>
 <body>
-<h1>Добро пожаловать!</h1>
+<h1>Ваш профиль</h1>
 <div id="user-data">
     <!-- Данные будут подставлены через JavaScript -->
 </div>
 <script>
-    // Получаем данные из сессии
-    fetch('/demo/profile')
-        .then(response => response.text())
+    fetch('profile')
+        .then(r => r.text())
         .then(html => {
             document.getElementById('user-data').innerHTML = html;
         });
