--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Главная</title>
+    <meta charset="UTF-8">
+    <title>Главная страница</title>
 </head>
 <body>
 <h1>Добро пожаловать!</h1>
-<a href="login.html">Войти</a>
+<nav>
+    <a href="login.html">Вход</a> |
+    <a href="register.html">Регистрация</a>
+</nav>
 </body>
 </html>
