--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Вход/Регистрация</title>
+    <title>Вход</title>
 </head>
 <body>
 <form action="register" method="POST">
     <input type="text" name="username" placeholder="Логин" required>
     <input type="email" name="email" placeholder="Email" required>
     <input type="password" name="password" placeholder="Пароль" required>
-    <button type="submit">Войти/Зарегистрироваться</button>
+    <button type="submit">Войти</button>
 </form>
 </body>
 </html>
