--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,3 +1,4 @@
+<meta charset="UTF-8">
 <form action="login" method="POST" xmlns:th="http://www.w3.org/1999/xhtml">
     <input type="text" name="username" placeholder="Логин" required>
     <input type="password" name="password" placeholder="Пароль" required>
