--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -1,3 +1,4 @@
+<meta charset="UTF-8">
 <form action="register" method="POST" xmlns:th="http://www.w3.org/1999/xhtml">
   <input type="text" name="username" placeholder="Логин" required>
   <input type="email" name="email" placeholder="Email" required>
