--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -16,5 +16,6 @@
             document.getElementById('user-data').innerHTML = html;
         });
 </script>
+<a href="index.html">Выйти</a>
 </body>
 </html>
