--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -5,10 +5,11 @@
     <button type="submit">Войти</button>
     <a href="register.html">Регистрация</a>
 
-    <div th:if="${param.error}">
+    <!--<div th:if="${param.error}">
         <p style="color:red" th:switch="${param.error}">
             <span th:case="not_found">Аккаунт не найден</span>
             <span th:case="wrong_pass">Неверный пароль</span>
         </p>
     </div>
+    -->
 </form>
