--- a/src/main/webapp/mainpage.html
+++ b/src/main/webapp/mainpage.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная страница</title>
+    <a href="profile.html">Мой профиль</a>
+
+    <form action="search" method="GET">
+        <input type="text" name="query" placeholder="Поиск...">
+        <button type="submit">Искать</button>
+    </form>
 </head>
 <body>
 
