--- a/src/main/webapp/mainpage.html
+++ b/src/main/webapp/mainpage.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="notifications">
-    <!-- Здесь можно выводить уведомления о запросах в друзья -->
+    <a href="notifications">Уведомления</a>
 </div>
 </body>
 </html>
