--- a/src/main/webapp/mainpage.html
+++ b/src/main/webapp/mainpage.html
@@ -11,7 +11,9 @@
 <div class="header">
     <a href="profile">Мой профиль</a>
 </div>
-
+<div class="friends">
+    <a href="friendsList">Друзья</a>
+</div>
 <div class="search-box">
     <form action="search" method="GET">
         <input type="text" name="query" placeholder="Поиск пользователей..." required>
